update more options