@@ -1,10 +1,10 @@
-# OpenJDK 11 slim 版本的JAVA_HOME
-export JAVA_HOME=/usr/local/openjdk-11
+# Alpine Linux OpenJDK 11 版本的JAVA_HOME
+export JAVA_HOME=/usr/lib/jvm/java-11-openjdk
 
 # JVM性能优化参数
 export HADOOP_HEAPSIZE_MAX=512
 export HADOOP_HEAPSIZE_MIN=256
-export HADOOP_OPTS="$HADOOP_OPTS -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+export HADOOP_OPTS="$HADOOP_OPTS -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions"
 
 # NameNode JVM参数
 export HADOOP_NAMENODE_OPTS="-Xmx384m -Xms256m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 $HADOOP_NAMENODE_OPTS"
